--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,27 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'com.ukg.search.widget'
-version = '1.0-SNAPSHOT'
-sourceCompatibility = '11'
+group 'com.ukg.search.widget'
+version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+jar {
+    setDuplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+    manifest {
+        attributes "Main-Class": "com.ukg.search.widget.SearchWidgetApplication"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 dependencies {
